--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,4 +1,4 @@
-{
+ {
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
@@ -15,7 +15,7 @@
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
-            "externalConsole": true,//true显示外置的控制台窗口，false显示内置终端
+            "externalConsole": false,//true显示外置的控制台窗口，false显示内置终端
             "MIMode": "gdb",
             "miDebuggerPath": "gdb.exe",
             "setupCommands": [
