For the Beauty of Bits v0.6

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,3 @@
 {
-	"window.autoDetectColorScheme": true,
-	"workbench.preferredDarkColorTheme": "Visual Studio Dark - C++",
-	"workbench.colorTheme": "Visual Studio Dark - C++",
-	"workbench.preferredLightColorTheme": "Visual Studio Light - C++"
+	"C_Cpp.errorSquiggles": "enabled"
 }
