--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,4 +1,4 @@
- {
+{
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
@@ -13,7 +13,7 @@
             "program": "${fileDirname}\\${fileBasenameNoExtension}.exe",//调试程序的路径名称
             "args": [],//调试传递参数
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
+            "cwd": "${fileDirname}",
             "environment": [],
             "externalConsole": false,//true显示外置的控制台窗口，false显示内置终端
             "MIMode": "gdb",
@@ -24,7 +24,7 @@
                     "text": "-enable-pretty-printing",
                     "ignoreFailures": true
                 }
-            ]
+            ],
         }
     ]
 }
