--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,7 @@
             "args": [//编译时候的参数
                 "-g",//添加gdb调试选项
 				// "-fexec-charset=GBK",
+				"-std=gnu++23",
                 "${file}",
                 "-o",//指定生成可执行文件的名称
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
